# webharvest

./: .gitattributes  .gitignore  README.md  build_desktop.py  demo.py  demo_product.py  main_desktop.py  proxies.txt  pyproject.toml  requirements.txt  setup_mac.sh  start_mac.sh
license_server/: .env.example  Dockerfile  __init__.py  config.py  database.py  docker-compose.yml  email_service.py  license.py  main.py  payos_service.py  proxy_service.py  requirements.txt  run.py
license_server/static/: index.html  return.html  translations_marketing.js
license_server/static/admin/: admin.css  admin.js  icon.icns  index.html
scripts/: build.bat  build.sh  generate_favicon.py  generate_sprout_favicon.py
webharvest/: __init__.py  __main__.py  batch_parser.py  cli.py  config.py  models.py  server.py
webharvest/downloader/: __init__.py  image_downloader.py
webharvest/extractors/: __init__.py  content.py  images.py
webharvest/extractors/json_parsers/: json_ld.py  nextdata.py  shopify_json.py
webharvest/extractors/sites/: __init__.py  aliexpress.py  base_site.py  ebay.py  etsy.py  gearlaunch.py  gelato.py  gooten.py  merchize.py  printful.py  printify.py  redbubble.py  shopbase.py  shopify.py  society6.py  spreadshirt.py  teechip.py  teelaunch.py  teepublic.py  teespring.py  woocommerce.py  zazzle.py
webharvest/fetchers/: __init__.py  base.py  dynamic.py  static.py  stealth.py
webharvest/pipeline/: __init__.py  crawler.py  product_crawler.py
webharvest/static/: app.js  icon.icns  index.html  style.css  translations.js
