[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webharvest"
version = "1.0.0"
description = "Async web scraper and image downloader with auto-fetcher selection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "WebHarvest Contributors"},
]
keywords = ["web-scraping", "image-downloader", "crawler", "async", "playwright"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
    "selectolax>=0.3.17",
]

[project.optional-dependencies]
dynamic = ["playwright>=1.40.0"]
all = ["webharvest[dynamic]"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
webharvest = "webharvest.cli:main"

[project.urls]
Homepage = "https://github.com/webharvest/webharvest"
Documentation = "https://github.com/webharvest/webharvest#readme"
Repository = "https://github.com/webharvest/webharvest"
Issues = "https://github.com/webharvest/webharvest/issues"

[tool.setuptools.packages.find]
include = ["webharvest*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
