[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webharvest"
version = "1.1.0"
description = "Async web scraper and image downloader — desktop & CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "WebHarvest Contributors"},
]
keywords = ["web-scraping", "image-downloader", "crawler", "async", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
    "selectolax>=0.3.17",
    "curl_cffi>=0.9",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pywebview>=5.0",
]

[project.optional-dependencies]
dynamic = ["playwright>=1.40.0"]
all = ["webharvest[dynamic]"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pyinstaller>=6.0",
]

[project.scripts]
webharvest = "webharvest.cli:main"
webharvest-desktop = "main_desktop:main"

[project.urls]
Homepage = "https://github.com/tuanp20/webharvest"
Repository = "https://github.com/tuanp20/webharvest"
Issues = "https://github.com/tuanp20/webharvest/issues"

[tool.setuptools.packages.find]
include = ["webharvest*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
